Commit#2 User Service is created.And Kafka Producer is added

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
   <modules>
     <module>order-service</module>
     <module>inventory-service</module>
+      <module>eureka-server</module>
+      <module>user-information-service</module>
   </modules>
 
   <properties>
