--- a/user-information-service/pom.xml
+++ b/user-information-service/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>order-service</artifactId>
+    <artifactId>user-information-service</artifactId>
     <packaging>jar</packaging>
 
-    <name>order-service</name>
+    <name>user-information-service</name>
     <url>http://maven.apache.org</url>
 
     <properties>
