--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -19,5 +19,9 @@ spring:
         defaultZone: http://localhost:8761/eureka
       fetch-registry: true
       register-with-eureka: true
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: inventory-consumer
 server:
   port: 8081
