--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>inventory-service</module>
       <module>eureka-server</module>
       <module>user-information-service</module>
+      <module>cargo-service</module>
   </modules>
 
   <properties>
